[Feature] add 404 page not found feature

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 
 <body>
   <base href="/">
-  <app-root>Loading...</app-root>
+  <app-root><i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></app-root>
 
 
   <!-- jQuery -->
