[Feature] Customise card views for both items and bucketlist

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,22 @@
 
   <!-- Theme JavaScript -->
   <script src="scripts/vendor/js/creative.js"></script>
+  <script>
+    $().ready(function(){
+        $('[rel="tooltip"]').tooltip();
+
+    });
+
+    function rotateCard(btn){
+        var $card = $(btn).closest('.card-container');
+        console.log($card);
+        if($card.hasClass('hover')){
+            $card.removeClass('hover');
+        } else {
+            $card.addClass('hover');
+        }
+    }
+  </script>
 
 </body>
 </html>
